source/lemon_h.ads


  -- All configurations in this set
  -- Sequential number for this state
  -- List of actions for this state
  -- Number of actions on terminals and nonterminals
  -- yy_action[] offset for terminals and nonterms
  -- Default action is to REDUCE by this rule
  -- The default REDUCE rule.
  -- True if this is an auto-reduce state
  -- A followset propagation link indicates that the contents of one
  --** configuration followset should be propagated to another whenever
  --** the first changes.

  -- The configuration to which linked
   type plink is record
      cfp : access config;  -- lemon.h:189
      next : access plink;  -- lemon.h:190
   end record;
   pragma Convention (C_Pass_By_Copy, plink);  -- lemon.h:188

  -- The next propagate link
  -- The state vector for the entire parser generator is recorded as
  --** follows.  (LEMON uses no global variables and makes little use of
  --** static variables.  Fields in the following structure can be thought
  --** of as begin global variables in the program.)

   -- Table of states sorted by state number
   type Lemon_Record is
      record
         Sorted     : Rule_Access; --  System.Address;  -- lemon.h:199
         Rule       : Rule_Access;     -- lemon.h:200
         Start_Rule : Rule_Access;     -- lemon.h:201
         N_State    : aliased int;  -- lemon.h:202
         Nx_State   : aliased int;  -- lemon.h:203
         N_Rule     : aliased int;  -- lemon.h:204
         N_Symbol   : aliased Symbol_Index;  -- lemon.h:205
         N_Terminal : aliased Symbol_Index;  -- lemon.h:206
         Min_Shift_Reduce : aliased int;  -- lemon.h:207
         Err_Action   : aliased int;  -- lemon.h:208
         Acc_Action   : aliased int;  -- lemon.h:209
         No_Action    : aliased int;  -- lemon.h:210
         Min_Reduce   : aliased int;  -- lemon.h:211
         Max_Action   : aliased int;  -- lemon.h:212
         Symbols      : Symbol_Access_Array_Access;  -- System.Address;  -- lemon.h:213
         Error_Cnt    : aliased int;  -- lemon.h:214
         Err_Sym      : Symbol_Access;  -- lemon.h:215
         Wildcard     : Symbol_Access;  -- lemon.h:216
         Name         : Interfaces.C.Strings.chars_ptr;  -- lemon.h:217
         Arg          : Interfaces.C.Strings.chars_ptr;  -- lemon.h:218
         Ctx          : Interfaces.C.Strings.chars_ptr;  -- lemon.h:219
         Token_Type   : Interfaces.C.Strings.chars_ptr;  -- lemon.h:220
         Var_Type     : Interfaces.C.Strings.chars_ptr;  -- lemon.h:221
         Start        : Interfaces.C.Strings.chars_ptr;  -- lemon.h:222
         Stack_Size   : Interfaces.C.Strings.chars_ptr;  -- lemon.h:223
         Include      : Interfaces.C.Strings.chars_ptr;  -- lemon.h:224
         Error        : Interfaces.C.Strings.chars_ptr;  -- lemon.h:225
         Overflow     : Interfaces.C.Strings.chars_ptr;  -- lemon.h:226
         Failure      : Interfaces.C.Strings.chars_ptr;  -- lemon.h:227
         C_Accept     : Interfaces.C.Strings.chars_ptr;  -- lemon.h:228
         Extra_Code   : Interfaces.C.Strings.chars_ptr;  -- lemon.h:229
         Token_Dest   : Interfaces.C.Strings.chars_ptr;  -- lemon.h:230
         Var_Dest     : Interfaces.C.Strings.chars_ptr;  -- lemon.h:231
         File_Name    : Interfaces.C.Strings.chars_ptr;  -- lemon.h:232
         Token_Prefix : Interfaces.C.Strings.chars_ptr;  -- lemon.h:234
         N_Conflict       : aliased int;  -- lemon.h:235
         N_Action_Tab     : aliased int;  -- lemon.h:236
         N_Lookahead_Tab  : aliased int;  -- lemon.h:237
         Table_Size       : aliased int;  -- lemon.h:238
         Basis_Flag       : aliased int;  -- lemon.h:239
         Has_Fallback     : aliased int;  -- lemon.h:240
         No_Line_Nos_Flag : aliased int;  -- lemon.h:241
         Argv0            : Interfaces.C.Strings.chars_ptr;  -- lemon.h:242
      end record;
   pragma Convention (C_Pass_By_Copy, Lemon_Record);  -- lemon.h:198

   use Interfaces.C.Strings;

   Clean_Lemon : Constant Lemon_Record :=
     (
         Sorted     => null,
         Rule       => null,
         Start_Rule => null,
         N_State    => 0,
         Nx_State   => 0,
         N_Rule     => 0,
         N_Symbol   => 0,
         N_Terminal => 0,
         Min_Shift_Reduce => 0,
         Err_Action   => 0,
         Acc_Action   => 0,
         No_Action    => 0,
         Min_Reduce   => 0,
         Max_Action   => 0,
         Symbols      => null,
         Error_Cnt    => 0,
         Err_Sym      => null,
         Wildcard     => null,
         Name         => Null_Ptr,
         Arg          => Null_Ptr,
         Ctx          => Null_Ptr,
         Token_Type   => Null_Ptr,
         Var_Type     => Null_Ptr,
         Start        => Null_Ptr,
         Stack_Size   => Null_Ptr,
         Include      => Null_Ptr,
         Error        => Null_Ptr,
         Overflow     => Null_Ptr,
         Failure      => Null_Ptr,
         C_Accept     => Null_Ptr,
         Extra_Code   => Null_Ptr,
         Token_Dest   => Null_Ptr,
         Var_Dest     => Null_Ptr,
         File_Name    => Null_Ptr,
         Token_Prefix => Null_Ptr,
         N_Conflict       => 0,
         N_Action_Tab     => 0,
         N_Lookahead_Tab  => 0,
         Table_Size       => 0,
         Basis_Flag       => 0,
         Has_Fallback     => 0,
         No_Line_Nos_Flag => 0,
         Argv0            => Null_Ptr
);
  -- List of all rules
  -- First rule
  -- Number of states
  -- nstate with tail degenerate states removed
  -- Number of rules
  -- Number of terminal and nonterminal symbols
  -- Number of terminal symbols
  -- Minimum shift-reduce action value
  -- Error action value
  -- Accept action value
  -- No-op action value
  -- Minimum reduce action
  -- Maximum action value of any kind
  -- Sorted array of pointers to symbols
  -- Number of errors
  -- The error symbol
  -- Token that matches anything
  -- Name of the generated parser
  -- Declaration of the 3th argument to parser
  -- Declaration of 2nd argument to constructor
  -- Type of terminal symbols in the parser stack
  -- The default type of non-terminal symbols
  -- Name of the start symbol for the grammar
  -- Size of the parser stack
  -- Code to put at the start of the C file
  -- Code to execute when an error is seen
  -- Code to execute on a stack overflow
  -- Code to execute on parser failure
  -- Code to execute when the parser excepts
  -- Code appended to the generated file
  -- Code to execute to destroy token data
  -- Code for the default non-terminal destructor
  -- Name of the input file
  --  char *outname;           /* Name of the current output file
  -- A prefix added to token names in the .h file
  -- Number of parsing conflicts
  -- Number of entries in the yy_action[] table
  -- Number of entries in yy_lookahead[]
  -- Total table size of all tables in bytes
  -- Print only basis configurations
  -- True if any %fallback is seen in the grammar
  -- True if #line statements should not be printed
  -- Name of the program
  --********************************************************************
  --#define NO_OFFSET (-2147483647)
   NO_OFFSET : aliased long;  -- lemon.h:247
   pragma Import (C, NO_OFFSET, "NO_OFFSET");

  --********* From the file "report.h" ************************************
--     procedure lemon_reprint (arg1 : access Lemon_Record);  -- lemon.h:250
--     pragma Import (C, lemon_reprint, "lemon_reprint");

--     procedure lemon_report_output (arg1 : access Lemon_Record);  -- lemon.h:251
--     pragma Import (C, lemon_report_output, "lemon_report_output");

--     procedure lemon_report_table (arg1 : access Lemon_Record);  -- lemon.h:252
--     pragma Import (C, lemon_report_table, "lemon_report_table");

--     procedure lemon_report_header (arg1 : access Lemon_Record);  -- lemon.h:253
--     pragma Import (C, lemon_report_header, "lemon_report_header");

--     procedure lemon_compress_tables (arg1 : access Lemon_Record);  -- lemon.h:254
--     pragma Import (C, lemon_compress_tables, "lemon_compress_tables");

--     procedure lemon_resort_states (arg1 : access Lemon_Record);  -- lemon.h:255
--     pragma Import (C, lemon_resort_states, "lemon_resort_states");

--    --********* From the file "build.h" ***********************************
--     procedure lemon_find_rule_precedences (arg1 : access Lemon_Record);  -- lemon.h:258
--     pragma Import (C, lemon_find_rule_precedences, "lemon_find_rule_precedences");

--     procedure lemon_find_first_sets (arg1 : access Lemon_Record);  -- lemon.h:259
--     pragma Import (C, lemon_find_first_sets, "lemon_find_first_sets");

--  --   procedure lemon_find_states (arg1 : access Lemon_Record);  -- lemon.h:260
--  --   pragma Import (C, lemon_find_states, "lemon_find_states");

--     procedure lemon_find_links (arg1 : access Lemon_Record);  -- lemon.h:261
--     pragma Import (C, lemon_find_links, "lemon_find_links");

--     procedure lemon_find_follow_sets (arg1 : access Lemon_Record);  -- lemon.h:262
--     pragma Import (C, lemon_find_follow_sets, "lemon_find_follow_sets");

--     procedure lemon_find_actions (arg1 : access Lemon_Record);  -- lemon.h:263
--     pragma Import (C, lemon_find_actions, "lemon_find_actions");

--     function lime_get_user_template_name return Interfaces.C.Strings.chars_ptr;  -- lemon.h:267
--     pragma Import (C, lime_get_user_template_name, "lime_get_user_template_name");

--    --  lempar.c for C and cherry_parser.adb for Ada.
--     procedure lime_template_open
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : access int;
--        arg3 : access int);  -- lemon.h:271
--     pragma Import (C, lime_template_open, "lime_template_open");

--    -- User provided template. "" when none.
--    -- Incremented on error
--    -- Success = 0 when no template file is
--    --  Thisk function finds the template file and opens it. File handle
--    --  is located in the context structure.
--     procedure lime_implementation_open (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:280
--     pragma Import (C, lime_implementation_open, "lime_implementation_open");

--    --  Open a file for writing then implementaion (parse.adb/parse.c).
--    --  File handler is located in the context structure.
--     procedure lime_template_transfer (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:286
--     pragma Import (C, lime_template_transfer, "lime_template_transfer");

--     procedure lime_print
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : int;
--        arg3 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:292
--     pragma Import (C, lime_print, "lime_print");

--     procedure lime_template_linedir (arg1 : access int; arg2 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:301
--     pragma Import (C, lime_template_linedir, "lime_template_linedir");

--     procedure lime_write_include (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:308
--     pragma Import (C, lime_write_include, "lime_write_include");

--    --(int          mh_flag,
--     procedure lime_generate_tokens
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : int;
--        arg3 : int);  -- lemon.h:315
--     pragma Import (C, lime_generate_tokens, "lime_generate_tokens");

--    --  (int          mh_flag,
--     function lime_get_token_callback (arg1 : int) return Interfaces.C.Strings.chars_ptr;  -- lemon.h:323
--     pragma Import (C, lime_get_token_callback, "lime_get_token_callback");

--     procedure lime_generate_spec
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : Interfaces.C.Strings.chars_ptr;
--        arg3 : Interfaces.C.Strings.chars_ptr;
--        arg4 : int;
--        arg5 : int);  -- lemon.h:329
--     pragma Import (C, lime_generate_spec, "lime_generate_spec");
